refactor: enum instead of string for state
